assets/sass/main.css
/* ... */
.team-member-section {
  display: flex;
  flex-wrap: wrap;
}

.team-member-item {
  color: #7C8081;
  border-bottom: none;
}

.team-member-item:hover {
  cursor: pointer;
  border-bottom: dotted 1px;
}

.team-member-title {
  display: block !important;
}

.team-member {
  max-width: 200px; }

.width-100 {
  width: 100%; }

.content {
  text-align: justify; }

.sidebar {
  text-align: left; }

#myCarousel {
  margin-bottom: 50px; }
  #myCarousel .carousel-inner .item img {
    overflow: hidden;
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: 50vw;
    max-height: 500px;
    width: auto; }
  #myCarousel .carousel-indicators {
    margin-bottom: 0; }

#sponsors {
  display: flex;
  flex-direction: column;
  padding: 30px;
  text-align: center; 
  flex-wrap: wrap; 
}

.sponsor-ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.sponsor-list {
  padding: 1em;
  display: flex;
  align-items: center;
  margin-top: 5%;
  margin-right: 1%;
  margin-left: 1%;
  justify-content: center;
  width: 31%;
  flex-wrap: wrap; 
}

.sponsor-list a {
    border-bottom: none;
}

.sponsor-image {
  max-width: 75%; 
}

/* Sponsor in 2 columns for screen width 550 px to 950 px */ 
@media screen and (max-width: 950px) {
  .sponsor-list {
    padding: 1em;
    display: flex;
    align-items: center;
    margin-top: 5%;
    margin-right: 1%;
    margin-left: 1%;
    justify-content: center;
    width: 42%;
    flex-wrap: wrap; 
  }
}

/* Sponsor logos in 1 column for screen width 550 px and below */
@media screen and (max-width: 600px) {
  .sponsor-list {
    padding: 1em;
    display: flex;
    align-items: center;
    margin-top: 5%;
    margin-right: 1%;
    margin-left: 1%;
    justify-content: center;
    width: 90%;
    flex-wrap: wrap;
}

.section-title {
  color: #7e5d74; }

.financial-report {
  width: 100%;
  height: 700px; }

table, th, td {
  text-align: center;
  vertical-align: top;
  padding: 0 10px 10px; }
  table h4, th h4, td h4 {
    margin-bottom: 0; }

#donate-banner {
  max-width: 100%;
  max-height: 100%;
  margin-bottom: 20px; }

.donate-row {
  max-width: 600px;
  float: left;
  margin: 10px; }
  .donate-row .button {
    display: inline;
    padding: 15px 20px; }

}

/* Styles for chapter two, by Dave */

.chap-2-img-container {
  text-align: center;
}

.chap-2-img-vertical {
  width: 50%;
  margin-bottom: 1%;
}

.chap-2-img-horizontal {
  width: 70%;
  margin-bottom: 2.5%;
}

.position-text {
  margin-bottom: 5.5%;}

.iframe-container{
  position: relative;
  width: 100%;
  padding-bottom: 56.25%; 
  height: 0;
}

.iframe-container iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Donate page styling */
#donate-container {
  padding: 0 !important;
  display: inline-block;
  display: flex; 
  flex-wrap: wrap-reverse; 
  background: url(/images/donate/donate-1.jpg) no-repeat local left center;
  background-size: cover;
}

.donate-top-section { 
  display: flex; 
  flex-wrap: wrap-reverse; 
  padding: 4em;
}

/*
#donate-container-2 {
  padding: 0 !important;
  background-color: #568fd1;
}

.donate-bot-section {
  display: flex; 
  padding: 4em;
  flex-direction: column;
  flex-wrap: wrap; 
  color: #ffffff;
  font-weight: 300;
}
*/

.donate-text h2 {
  color: #fafafa;
  font-size: 150% !important;
  font-weight: 650;
  padding-top: 150px !important;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .donate-div {
    padding: 0px !important;
  }
} 

/* Medium devices (768px and down) */
@media only screen and (max-width: 768px) {
  .donate-text h2 {
    padding-left: 30px;
  }
} 

@media only screen and (min-width: 769px) {
  .donate-text h2 {
    padding-top: 250px !important;
  }
} 

/* Fundraisers page styling */
#fundraisers-main {
  font-weight: 500;
}

#fundraisers-header {
  text-align: center;
  position: relative;
  width: 100%;
  height: 80vh;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  margin: 0 0 0 0;
}

#fundraising-title-text {
  text-align: center; 
  line-height: 1.5em;
  font-size: 6rem;
  padding: 20px;
  margin: 15px;
  font-weight: 600; 
  font-size: 50px;
  color: white;
  z-index: 1;
}

.fundraising-title-video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: auto;
  max-height: 50%;
}

.fundraisers {
  display: flex;
  background-size: cover;
  text-align: center;
  flex-wrap: wrap;
  height: 42em;
  overflow: hidden;
  
  margin: 0 0 0 0; } 
  .fundrasers.steps-origin {
    flex-direction: row;
  }
  .fundraisers.steps-reverse {
    flex-direction: row-reverse;
  }

.fundraisers-container {
  width: 45%; 
  display: flex;
  align-items: center;
}.fundraisers-container.origin{
  justify-content: flex-start;
}.fundraisers-container.reverse {
  justify-content: flex-end;
}
#absolute-pictures-tap {
  position: absolute;
  overflow: hidden;
  max-width: 30%;
  max-height: 50%;
  z-index: 2;
  left: -5%;
  margin-top: -20%;
}
#absolute-pictures-blue-garland {
  position: absolute;
  overflow: hidden;
  transform: rotate(30deg);
  max-width: 50%;
  max-height: 100%;
  z-index: 2;
  right: 0%;
}
#absolute-pictures-red-garland{
  position: absolute;
  overflow: hidden;
  transform: rotate(-35deg);
  max-width: 40%;
  max-height: 100%;
  left: 0%;
  margin-top: -10%;
  z-index: 2;
}
#absolute-pictures-baloon-1{
  position: absolute;
  overflow: hidden;
  transform: rotate(-10deg);
  left: 2%;
  margin-top: -15%;
  max-width: 27%;
  max-height: 100%;
  z-index: 2;
}
#absolute-pictures-baloon-2{
  position: absolute;
  overflow: hidden;
  transform: rotate(10deg);
  right: 2%;
  margin-top: -12%;
  max-width: 30%;
  max-height: 100%;
  z-index: 2;
}

.steps-image {
  width: 70%;
  align-self: center;}
.steps-image img {
  max-width: 70%;
  max-height: 70%;
}
/* ... */

